[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvivosun"
version = "0.1.0"
description = "Async Python library for the Vivosun GrowHub cloud API and GrowCam local control"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "python-dvr>=0.0.1",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
